@@ -11,6 +11,7 @@ import (
 	"io/ioutil"
 	"net/http"
 	"net/http/httptest"
+	"strings"
 	"sync"
 	"testing"
 
@@ -30,6 +31,39 @@ func addCatchAll(mux *http.ServeMux, t *testing.T) *http.ServeMux {
 		t.Fatal("HTTP catch all handled called")
 	})
 	return mux
+}
+
+func TestPortDefaults(t *testing.T) {
+	l, err := logger.New()
+	require.NoError(t, err)
+
+	testCases := []struct {
+		Name           string
+		URI            string
+		ExpectedPort   int
+		ExpectedScheme string
+	}{
+		{"no scheme uri", "test.url", kibanaPort, "http"},
+		{"default kibana port", "http://test.url", kibanaPort, "http"},
+		{"specified kibana port", "http://test.url:123", 123, "http"},
+		{"default kibana https port", "https://test.url", kibanaHTTPSPort, "https"},
+		{"specified kibana https port", "https://test.url:123", 123, "https"},
+	}
+	for _, tc := range testCases {
+		t.Run(tc.Name, func(t *testing.T) {
+			cfg, err := NewConfigFromURL(tc.URI)
+			require.NoError(t, err)
+
+			c, err := NewWithConfig(l, cfg, nil)
+			require.NoError(t, err)
+
+			r, err := c.request("GET", "/", nil, strings.NewReader(""))
+			require.NoError(t, err)
+
+			assert.True(t, strings.HasSuffix(r.Host, fmt.Sprintf(":%d", tc.ExpectedPort)))
+			assert.Equal(t, tc.ExpectedScheme, r.URL.Scheme)
+		})
+	}
 }
 
 // - Prefix.
